--- a/frontend/src/styles/neumorphism.scss
+++ b/frontend/src/styles/neumorphism.scss
@@ -24,7 +24,7 @@
 
 button {
   @include neumorphic(6, 6, 8);
-  border: 1px dashed $border-color;
+  border: 1px solid $border-color;
   border-radius: 8px;
   padding: 6px 12px;
 
@@ -39,5 +39,18 @@ button {
   &.fab {
     border-radius: 50%;
     padding: 12px;
+  }
+}
+
+input {
+  @include neumorphic_inset(6, 6, 8);
+  padding: 2px 8px;
+  background-color: transparent;
+  border-radius: 4px;
+  width: 64px;
+  text-align: center;
+
+  &::-webkit-inner-spin-button {
+    display: none;
   }
 }
